# ct-uncertainty-prop

./: .gitignore  CMakeLists.txt  README.md
pybind11/: CMakeLists.txt
src/: App.cpp  App.h  Base.cpp  Base.h  CMakeLists.txt  Concepts.h  DataInitializer.cpp  DataInitializer.h  Enum.h  MainWindow.cpp  MainWindow.h  NameLineEdit.h  NoMarginFormLayout.h  RenderWidget.cpp  RenderWidget.h  Types.h  main.cpp
src/Analysis/: extract_features.py  extract_features.py.bak  extract_features_parallel.py  feature_dataset.py  params.yaml  pca.py  tsne.py
src/Artifacts/: Artifact.cpp  Artifact.h  BasicImageArtifact.cpp  BasicImageArtifact.h  CompositeArtifact.cpp  CompositeArtifact.h  CompositeImageArtifact.cpp  CompositeImageArtifact.h  GaussianArtifact.cpp  GaussianArtifact.h  ImageArtifact.cpp  ImageArtifact.h  ImageArtifactBase.cpp  ImageArtifactBase.h  ImageArtifactComposition.cpp  ImageArtifactComposition.h  ImageArtifactConcatenation.cpp  ImageArtifactConcatenation.h  ImageArtifactDetails.h  MotionArtifact.cpp  MotionArtifact.h  Pipeline.cpp  Pipeline.h  PipelineList.cpp  PipelineList.h  RingArtifact.cpp  RingArtifact.h  SaltPepperArtifact.cpp  SaltPepperArtifact.h  StructureArtifact.cpp  StructureArtifact.h  StructureArtifactList.cpp  StructureArtifactList.h  StructureArtifactListCollection.cpp  StructureArtifactListCollection.h  StructureArtifactsFilter.cpp  StructureArtifactsFilter.h  StructureWrapper.cpp  StructureWrapper.h  Types.h
src/Artifacts/Filters/: ClearImageArtifactArraysFilter.cpp  CuppingArtifactFilter.cpp  CuppingArtifactFilter.h  GaussianArtifactFilter.cpp  GaussianArtifactFilter.h  ImageArtifactFilter.cpp  ImageArtifactFilter.h  MergeParallelImageArtifactFilters.cpp  MergeParallelImageArtifactFilters.h  PassThroughImageArtifactFilter.h  RingArtifactFilter.cpp  RingArtifactFilter.h  SaltPepperArtifactFilter.cpp  SaltPepperArtifactFilter.h  StairStepArtifactFilter.cpp  StairStepArtifactFilter.h  WindMillArtifactFilter.cpp  WindMillArtifactFilter.h
src/Artifacts/Image/: BasicImageArtifact.cpp  BasicImageArtifact.h  CompositeImageArtifact.cpp  CompositeImageArtifact.h  CuppingArtifact.cpp  ImageArtifact.cpp  ImageArtifact.h  ImageArtifactBase.cpp  ImageArtifactBase.h  ImageArtifactConcatenation.cpp  ImageArtifactConcatenation.h  RingArtifact.cpp  SaltPepperArtifact.cpp  StairStepArtifact.cpp  StairStepArtifact.h  WindMillArtifact.cpp  WindMillArtifact.h
src/Artifacts/Structure/: MetalArtifact.cpp  MetalArtifact.h  MotionArtifact.cpp  MotionArtifact.h  StructureArtifact.cpp  StructureArtifact.h  StructureArtifactListCollection.cpp  StructureArtifactListCollection.h  StructureArtifactsFilter.cpp  StructureArtifactsFilter.h  WindmillArtifact.cpp  WindmillArtifact.h
src/Artifacts/UI/: ArtifactsDialog.cpp  ArtifactsDialog.h  ArtifactsEditDialog.cpp  ArtifactsEditDialog.h  ArtifactsWidget.cpp  ArtifactsWidget.h  ImageArtifactConcatenationModel.cpp  ImageArtifactConcatenationModel.h  ImageArtifactsDelegate.cpp  ImageArtifactsDelegate.h  ImageArtifactsModel.cpp  ImageArtifactsModel.h  ImageArtifactsView.cpp  ImageArtifactsView.h  ImageArtifactsWidget.cpp  ImageArtifactsWidget.h  PipelinesWidget.cpp  PipelinesWidget.h  StructureArtifactsDelegate.cpp  StructureArtifactsDelegate.h  StructureArtifactsDialog.cpp  StructureArtifactsDialog.h  StructureArtifactsModel.cpp  StructureArtifactsModel.h  StructureArtifactsView.cpp  StructureArtifactsView.h  StructureArtifactsWidget.cpp  StructureArtifactsWidget.h  StructureArtifactsWidgetDelegate.cpp  StructureArtifactsWidgetDelegate.h  StructureArtifactsWidgetDialog.cpp  StructureArtifactsWidgetDialog.h
src/Modeling/: BasicStructure.cpp  BasicStructure.h  BasicStructures.cpp  BasicStructures.h  CT.cpp  CT.h  CombinedStructure.cpp  CombinedStructure.h  CtDataCsgTree.cpp  CtDataCsgTree.h  CtDataCsgTreeModel.cpp  CtDataCsgTreeModel.h  CtDataSource.cpp  CtDataSource.h  CtStructure.cpp  CtStructure.h  CtStructureDelegate.cpp  CtStructureDelegate.h  CtStructureEditDialog.cpp  CtStructureEditDialog.h  CtStructureTree.cpp  CtStructureTree.h  ImplicitCone.cpp  ImplicitCone.h  ImplicitCtDataSource.cpp  ImplicitCtDataSource.h  ImplicitCtStructure.cpp  ImplicitCtStructure.h  ImplicitCylinder.cpp  ImplicitCylinder.h  ImplicitStructureCombination.cpp  ImplicitStructureCombination.h  ModelingWidget.cpp  ModelingWidget.h  NrrdCtDataSource.cpp  NrrdCtDataSource.h  SimpleTransform.cpp  SimpleTransform.h
src/Modeling/UI/: CtDataCsgTreeModel.cpp  CtDataCsgTreeModel.h  CtStructureDelegate.cpp  CtStructureDelegate.h  CtStructureDialog.cpp  CtStructureDialog.h  CtStructureEditDialog.cpp  CtStructureEditDialog.h  CtStructureTreeModel.cpp  CtStructureTreeModel.h  CtStructureView.cpp  CtStructureView.h  ModelingRenderWidget.cpp  ModelingRenderWidget.h  ModelingWidget.cpp  ModelingWidget.h
src/PipelineGroups/: ArtifactVariantPointer.cpp  ArtifactVariantPointer.h  ImageScalarsWriter.cpp  ObjectProperty.h  ParameterSpaceState.cpp  ParameterSpaceState.h  PipelineBatch.cpp  PipelineBatch.h  PipelineGroup.cpp  PipelineGroup.h  PipelineGroupList.cpp  PipelineGroupList.h  PipelineParameterSpace.cpp  PipelineParameterSpace.h  PipelineParameterSpaceState.cpp  PipelineParameterSpaceState.h  PipelineParameterSpan.cpp  PipelineParameterSpan.h  Types.h  extract_features.py  params.yaml  pca.py
src/PipelineGroups/IO/: HdfImageReadHandle.cpp  HdfImageReadHandle.h  HdfImageReader.cpp  HdfImageReader.h  HdfImageWriter.cpp  HdfImageWriter.h  ImageScalarsWriter.cpp  ImageScalarsWriter.h
src/Segmentation/: SegmentationFilterWidget.cpp  SegmentationFilterWidget.h  SegmentationWidget.cpp  ThresholdFilter.cpp  ThresholdFilter.h
src/Ui/: MainWindow.cpp  MainWindow.h
src/Ui/Analysis/: AnalysisDataWidget.cpp  AnalysisDataWidget.h  AnalysisMainWidget.cpp  AnalysisWidget.h  (+20 more)
src/Utils/: Enum.h  ImageDataUtils.h  IndexTypes.h  LinearAlgebraTypes.h  Overload.h  PythonInterpreter.h  RenderWidget.cpp  RenderWidget.h  SimpleTransform.cpp  SimpleTransform.h  Statistics.h  System.h  TimeStampedData.h  Types.h  WidgetUtils.h  vtkImageDataArrayIterator.cpp  vtkImageDataArrayIterator.h
(+101 files in other folders)
